# glm5-distill

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: distill_qwen3_14b.yaml  distill_qwen3_4b.yaml  distill_qwen3_8b.yaml
data/seeds/: luxun_seeds.jsonl  seed_prompts.jsonl
notebooks/: distill_colab.ipynb
src/: adversarial.py  generate_teacher_data.py  inference.py  merge_and_export.py  persona.py  seed_luxun.py  train_sft.py
